<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.satyakomal.project.Gps">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/getCoordinates"
        android:textAlignment="center"
        android:layout_marginLeft="70sp"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/cButton"
        android:background="@drawable/button_selector"
        android:textColor="@color/textColor"
        />
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/Current_Latitude"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:id="@+id/cLatitude"
        android:layout_below="@+id/cButton"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/Latitude"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/latView"
        android:layout_below="@+id/cLatitude"
        android:layout_alignParentEnd="true"
         />

    /*<TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/Current_Longitude"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/cLongitude"
        android:layout_below="@+id/latView"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/Longitude"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/longView"
        android:layout_below="@+id/cLongitude"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/message"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:id="@+id/message"
        android:layout_below="@+id/longView"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
