<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.satyakomal.project.HomeActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registration Success"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:id="@+id/welcome_txt"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Location"
        android:textAlignment="center"
        android:layout_marginLeft="80sp"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_below="@+id/welcome_txt"
        android:layout_marginTop="35dp"
        android:id="@+id/Loco_button"
        android:background="@drawable/button_selector"
        android:textColor="@color/textColor"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Gps"
        android:textAlignment="center"
        android:layout_marginLeft="80sp"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_below="@+id/Loco_button"
        android:layout_marginTop="35dp"
        android:id="@+id/Gps_button"
        android:background="@drawable/button_selector"
        android:textColor="@color/textColor"
        />
</LinearLayout>
